--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
   <title>Games</title>
 </head>
 <body>
-  
+  <button id="rock">Rock</button>
+  <button id="paper">Paper</button>
+  <button id="scissors">Scissors</button>
+
+  <p id="result"></p>
+  <p id="winner">The winner is :</p>
+
+  <p id="player-score">Player Score : 0</p>
+  <p id="computer-score">Computer Score : 0</p>
 </body>
 </html>
